Adicionando Product Controller

--- a/ShopXam/ShopXam.Web/appsettings.json
+++ b/ShopXam/ShopXam.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost\\sqlexpress;Database=Shop;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
